# AutoTrading

./: README.md  output.csv  pyproject.toml  requirements_poetry.txt  requirements_poetry_wo_hashes.txt  trader.py  training_module.py
env_HW/Scripts/: activate  activate.bat
