[tool.poetry]
name = "mlds-hw1-2022"
version = "0.1.0"
description = "In this HW, we will implement a very aged prediction problem from the financial field. Given a series of stock prices, including daily open, high, low, and close prices, decide your daily action and make your best profit for the future trading. "
authors = ["Justin.Wu <P77111142@gs.ncku.edu.tw>"]
readme = "README.md"
packages = [{include = "mlds_hw1_2022"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
